# Server_monitor

./: .env.example  .gitignore  ARCHITECTURE.md  HELIOS_AI_PLAN.md  QUICKSTART.md  README.md  dev-deploy.sh  docker-compose.ai.yml  docker-compose.rbac.yml  docker-compose.yml  epdw_dashboard.html  health-check.sh  promote.sh
.claude/: settings.json  settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml  sql_bios_history.sql  sql_triage.sql
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_auth_tables.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/ai/: agents.py  client.py  memory.py  observability.py  prompts.py  react.py  tools.py
backend/app/api/: admin.py  ai.py  alerts.py  auth.py  bios.py  changelog.py  export.py  firmware.py  intelligence.py  inventory.py  lifecycle.py  livemon.py  metrics.py  racks.py  reports.py  reservations.py  servers.py  superadmin.py  timeseries.py  triage.py  usage.py  users.py  utilization.py
backend/app/collectors/: discovery.py  ipmi_collector.py  os_agent.py  pipt_client.py  prism_client.py  redfish_collector.py
backend/app/core/: audit.py  rbac.py  security.py  seed.py
backend/app/engines/: alert_engine.py  analytics.py  efficiency.py  firmware.py  health_score.py  optimization.py  predictive.py  rca.py  recommendations.py
backend/app/models/: __init__.py  ai.py  alerts.py  auth.py  health.py  intelligence.py  server.py  users.py
backend/app/services/: credentials.py
backend/app/tasks/: bios_batch.py  collection.py
backend/app/utils/: family.py
backend/scripts/: import_bangalore.py  import_fleet.py
deploy/kubernetes/: fleet-monitor.yaml
deploy/nginx/: nginx-rbac.conf  nginx.conf
deploy/postgres/: init.sql
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+56 files in other folders)
